@@ -21,17 +21,19 @@
  *   main()               - Main entry for test program.
  *   check_basics()       - Check for CR LF, mixed line endings, and blank
  *                          lines.
+ *   check_constraints()  - Check UIConstraints in the PPD file.
  *   check_case()         - Check that there are no duplicate groups, options,
  *                          or choices that differ only by case.
- *   check_constraints()  - Check UIConstraints in the PPD file.
  *   check_defaults()     - Check default option keywords in the PPD file.
  *   check_duplex()       - Check duplex keywords in the PPD file.
  *   check_filters()      - Check filters in the PPD file.
  *   check_profiles()     - Check ICC color profiles in the PPD file.
+ *   check_sizes()        - Check media sizes in the PPD file.
  *   check_translations() - Check translations in the PPD file.
  *   show_conflicts()     - Show option conflicts in a PPD file.
  *   test_raster()        - Test PostScript commands for raster printers.
  *   usage()              - Show program usage...
+ *   valid_path()         - Check whether a path has the correct capitalization.
  *   valid_utf8()         - Check whether a string contains valid UTF-8 text.
  */
 
@@ -41,12 +43,12 @@
 
 #include <cups/string.h>
 #include <cups/cups.h>
+#include <cups/dir.h>
 #include <cups/ppd-private.h>
 #include <cups/i18n.h>
 #include <cups/raster.h>
 #include <errno.h>
 #include <stdlib.h>
-#include <sys/stat.h>
 #include <math.h>
 
 
@@ -279,6 +281,8 @@ static int	check_translations(ppd_file_t *ppd, int errors, int verbose,
 static void	show_conflicts(ppd_file_t *ppd);
 static int	test_raster(ppd_file_t *ppd, int verbose);
 static void	usage(void);
+static int	valid_path(const char *keyword, const char *path, int errors,
+		           int verbose, int warn);
 static int	valid_utf8(const char *s);
 
 
@@ -1559,36 +1563,6 @@ main(int  argc,				/* I - Number of command-line args */
 	  }
       }
 
-#ifdef __APPLE__
-     /*
-      * APDialogExtension
-      */
-
-      for (attr = ppdFindAttr(ppd, "APDialogExtension", NULL); 
-	   attr != NULL; 
-	   attr = ppdFindNextAttr(ppd, "APDialogExtension", NULL))
-      {
-	if ((!attr->value || access(attr->value, 0)) && verbose >= 0)
-	  _cupsLangPrintf(stdout, _("        WARN    Missing "
-				    "APDialogExtension file \"%s\"\n"),
-			  attr->value ? attr->value : "<NULL>");
-      }
-
-     /*
-      * APPrinterIconPath
-      */
-
-      for (attr = ppdFindAttr(ppd, "APPrinterIconPath", NULL); 
-	   attr != NULL; 
-	   attr = ppdFindNextAttr(ppd, "APPrinterIconPath", NULL))
-      {
-	if ((!attr->value || access(attr->value, 0)) && verbose >= 0)
-	  _cupsLangPrintf(stdout, _("        WARN    Missing "
-				    "APPrinterIconPath file \"%s\"\n"),
-			  attr->value ? attr->value : "<NULL>");
-      }
-#endif	/* __APPLE__ */
-
       if (verbose > 0)
       {
         if (errors)
@@ -2420,6 +2394,10 @@ check_filters(ppd_file_t *ppd,		/* I - PPD file */
 
   prefix = warn ? "  WARN  " : "**FAIL**";
 
+ /*
+  * cupsFilter
+  */
+
   for (i = 0; i < ppd->num_filters; i ++)
   {
     if (sscanf(ppd->filters[i], "%15[^/]/%255s%d%*[ \t]%1023[^\n]", super, type,
@@ -2465,8 +2443,14 @@ check_filters(ppd_file_t *ppd,		/* I - PPD file */
 	if (!warn)
 	  errors ++;
       }
+      else
+        errors = valid_path("cupsFilter", pathprog, errors, verbose, warn);
     }
   }
+
+ /*
+  * cupsPreFilter
+  */
 
   for (attr = ppdFindAttr(ppd, "cupsPreFilter", NULL);
        attr;
@@ -2516,8 +2500,110 @@ check_filters(ppd_file_t *ppd,		/* I - PPD file */
         if (!warn)
 	  errors ++;
       }
+      else
+        errors = valid_path("cupsPreFilter", pathprog, errors, verbose, warn);
     }
   }
+
+#ifdef __APPLE__
+ /*
+  * APDialogExtension
+  */
+
+  for (attr = ppdFindAttr(ppd, "APDialogExtension", NULL); 
+       attr != NULL; 
+       attr = ppdFindNextAttr(ppd, "APDialogExtension", NULL))
+  {
+    if (!attr->value || access(attr->value, 0))
+    {
+      if (!warn && !errors && !verbose)
+	_cupsLangPuts(stdout, _(" FAIL\n"));
+
+      if (verbose >= 0)
+	_cupsLangPrintf(stdout, _("      %s  Missing "
+				  "APDialogExtension file \"%s\"\n"),
+			prefix, attr->value ? attr->value : "<NULL>");
+
+      if (!warn)
+	errors ++;
+    }
+    else
+      errors = valid_path("APDialogExtension", attr->value, errors, verbose,
+                          warn);
+  }
+
+ /*
+  * APPrinterIconPath
+  */
+
+  if ((attr = ppdFindAttr(ppd, "APPrinterIconPath", NULL)) != NULL)
+  {
+    if (!attr->value || access(attr->value, 0))
+    {
+      if (!warn && !errors && !verbose)
+	_cupsLangPuts(stdout, _(" FAIL\n"));
+
+      if (verbose >= 0)
+	_cupsLangPrintf(stdout, _("      %s  Missing "
+				  "APPrinterIconPath file \"%s\"\n"),
+			prefix, attr->value ? attr->value : "<NULL>");
+
+      if (!warn)
+	errors ++;
+    }
+    else
+      errors = valid_path("APPrinterIconPath", attr->value, errors, verbose,
+                          warn);
+  }
+
+ /*
+  * APPrinterLowInkTool
+  */
+
+  if ((attr = ppdFindAttr(ppd, "APPrinterLowInkTool", NULL)) != NULL)
+  {
+    if (!attr->value || access(attr->value, 0))
+    {
+      if (!warn && !errors && !verbose)
+	_cupsLangPuts(stdout, _(" FAIL\n"));
+
+      if (verbose >= 0)
+	_cupsLangPrintf(stdout, _("      %s  Missing "
+				  "APPrinterLowInkTool file \"%s\"\n"),
+			prefix, attr->value ? attr->value : "<NULL>");
+
+      if (!warn)
+	errors ++;
+    }
+    else
+      errors = valid_path("APPrinterLowInkTool", attr->value, errors, verbose,
+                          warn);
+  }
+
+ /*
+  * APPrinterUtilityPath
+  */
+
+  if ((attr = ppdFindAttr(ppd, "APPrinterUtilityPath", NULL)) != NULL)
+  {
+    if (!attr->value || access(attr->value, 0))
+    {
+      if (!warn && !errors && !verbose)
+	_cupsLangPuts(stdout, _(" FAIL\n"));
+
+      if (verbose >= 0)
+	_cupsLangPrintf(stdout, _("      %s  Missing "
+				  "APPrinterUtilityPath file \"%s\"\n"),
+			prefix, attr->value ? attr->value : "<NULL>");
+
+      if (!warn)
+	errors ++;
+    }
+    else
+      errors = valid_path("APPrinterUtilityPath", attr->value, errors, verbose,
+                          warn);
+  }
+#endif	/* __APPLE__ */
 
   return (errors);
 }
@@ -2605,6 +2691,8 @@ check_profiles(ppd_file_t *ppd,		/* I - PPD file */
       if (!warn)
 	errors ++;
     }
+    else
+      errors = valid_path("cupsICCProfile", filename, errors, verbose, warn);
 
    /*
     * Check for hash collisions...
@@ -3268,6 +3356,89 @@ usage(void)
 		  "    -vv                  Be very verbose\n"));
 
   exit(ERROR_USAGE);
+}
+
+
+/*
+ * 'valid_path()' - Check whether a path has the correct capitalization.
+ */
+
+static int				/* O - Errors found */
+valid_path(const char *keyword,		/* I - Keyword using path */
+           const char *path,		/* I - Path to check */
+	   int        errors,		/* I - Errors found */
+	   int        verbose,		/* I - Verbosity level */
+	   int        warn)		/* I - Warnings only? */
+{
+  cups_dir_t	*dir;			/* Current directory */
+  cups_dentry_t	*dentry;		/* Current directory entry */
+  char		temp[1024],		/* Temporary path */
+		*ptr;			/* Pointer into temporary path */
+  const char	*prefix;		/* WARN/FAIL prefix */
+
+
+  prefix = warn ? "  WARN  " : "**FAIL**";
+
+ /*
+  * Loop over the components of the path, checking that the entry exists with
+  * the same capitalization...
+  */
+
+  strlcpy(temp, path, sizeof(temp));
+
+  while ((ptr = strrchr(temp, '/')) != NULL)
+  {
+   /*
+    * Chop off the trailing component so temp == dirname and ptr == basename.
+    */
+
+    *ptr++ = '\0';
+
+   /*
+    * Try opening the directory containing the base name...
+    */
+
+    if (temp[0])
+      dir = cupsDirOpen(temp);
+    else
+      dir = cupsDirOpen("/");
+
+    if (!dir)
+      dentry = NULL;
+    else
+    {
+      while ((dentry = cupsDirRead(dir)) != NULL)
+      {
+        if (!strcmp(dentry->filename, ptr))
+	  break;
+      }
+
+      cupsDirClose(dir);
+    }
+
+   /*
+    * Display an error if the filename doesn't exist with the same
+    * capitalization...
+    */
+
+    if (!dentry)
+    {
+      if (!warn && !errors && !verbose)
+	_cupsLangPuts(stdout, _(" FAIL\n"));
+
+      if (verbose >= 0)
+	_cupsLangPrintf(stdout,
+			_("      %s  %s file \"%s\" has the wrong "
+			  "capitalization!\n"), prefix, keyword, path);
+
+      if (!warn)
+	errors ++;
+
+      break;
+    }
+  }
+
+  return (errors);
 }
 
 
